@@ -39,8 +39,11 @@ class User(object):
 
     def page(self, message):
         pager = os.environ.get("PAGER") or "less"
-        child_process = subprocess.Popen([pager], stdin=subprocess.PIPE)
-        child_process.communicate(input=message)
+        try:
+            child_process = subprocess.Popen([pager], stdin=subprocess.PIPE)
+            child_process.communicate(input=message)
+        except IOError, e:
+            pass
 
     def confirm(self):
         response = raw_input("\nContinue? [Y/n]: ")
